--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ video{
     margin-left: auto;
     margin-right: auto;
     margin-top: 7px;
-    max-width: 480px;
+    max-width: 100%;
     max-height: 270px;
 }
 
